--- a/index.html
+++ b/index.html
@@ -23,27 +23,27 @@
           <div class="Degree" id = "Degree"></div>
         </div>
         <div class="answer">
-          <div onclick="checkCorrect('C#')" class="C#" id="C#" role="button" style="margin: 8px; padding: 10px;" >C#</div>
-          <div onclick="checkCorrect('D#')" class="D#" id="D#" role="button" style="margin: 8px; padding: 10px;">D#</div>
-          <div onclick="checkCorrect('E#')" class="E#" id="E#" role="button" style="margin: 8px; padding: 10px;">E#</div>
-          <div onclick="checkCorrect('F#')" class="F#" id="F#" role="button" style="margin: 8px; padding: 10px;">F#</div>
-          <div onclick="checkCorrect('G#')" class="G#" id="G#" role="button" style="margin: 8px; padding: 10px;">G#</div>
-          <div onclick="checkCorrect('A#')" class="A#" id="A#" role="button" style="margin: 8px; padding: 10px;">A#</div>
-          <div onclick="checkCorrect('B#')" class="B#" id="B#" role="button" style="margin: 8px; padding: 10px;">B#</div>
-          <div onclick="checkCorrect('C')" class="C" id="C" role="button" style="margin: 8px; padding-left: 15px; padding-right: 15px; padding-top: 10px; padding-bottom: 10px">C</div>
-          <div onclick="checkCorrect('D')" class="D" id="D" role="button" style="margin: 8px; padding-left: 15px; padding-right: 15px; padding-top: 10px; padding-bottom: 10px">D</div>
-          <div onclick="checkCorrect('E')" class="E" id="E" role="button" style="margin: 8px; padding-left: 15px; padding-right: 15px; padding-top: 10px; padding-bottom: 10px">E</div>
-          <div onclick="checkCorrect('F')" class="F" id="F" role="button" style="margin: 8px; padding-left: 15px; padding-right: 15px; padding-top: 10px; padding-bottom: 10px">F</div>
-          <div onclick="checkCorrect('G')" class="G" id="G" role="button" style="margin: 8px; padding-left: 15px; padding-right: 15px; padding-top: 10px; padding-bottom: 10px">G</div>
-          <div onclick="checkCorrect('A')" class="A" id="A" role="button" style="margin: 8px; padding-left: 15px; padding-right: 15px; padding-top: 10px; padding-bottom: 10px">A</div>
-          <div onclick="checkCorrect('B')" class="B" id="B" role="button" style="margin: 8px; padding-left: 15px; padding-right: 15px; padding-top: 10px; padding-bottom: 10px">B</div>
-          <div onclick="checkCorrect('Cb')" class="Cb" id="Cb" role="button" style="margin: 8px; padding: 10px; padding-right: 11px;">C♭</div>
-          <div onclick="checkCorrect('Db')" class="Db" id="Db" role="button" style="margin: 8px; padding: 10px; padding-right: 11px;">D♭</div>
-          <div onclick="checkCorrect('Eb')" class="Eb" id="Eb" role="button" style="margin: 8px; padding: 10px; padding-right: 11px;">E♭</div>
-          <div onclick="checkCorrect('Fb')" class="Fb" id="Fb" role="button" style="margin: 8px; padding: 10px; padding-right: 11px;">F♭</div>
-          <div onclick="checkCorrect('Gb')" class="Gb" id="Gb" role="button" style="margin: 8px; padding: 10px; padding-right: 11px;">G♭</div>
-          <div onclick="checkCorrect('Ab')" class="Ab" id="Ab" role="button" style="margin: 8px; padding: 10px; padding-right: 11px;">A♭</div>
-          <div onclick="checkCorrect('Bb')" class="Bb" id="Bb" role="button" style="margin: 8px; padding: 10px; padding-right: 11px;">B♭</div>
+          <div onclick="checkCorrect('C#')" class="C#" id="C#" role="button"  >C#</div>
+          <div onclick="checkCorrect('D#')" class="D#" id="D#" role="button" >D#</div>
+          <div onclick="checkCorrect('E#')" class="E#" id="E#" role="button" >E#</div>
+          <div onclick="checkCorrect('F#')" class="F#" id="F#" role="button" >F#</div>
+          <div onclick="checkCorrect('G#')" class="G#" id="G#" role="button" >G#</div>
+          <div onclick="checkCorrect('A#')" class="A#" id="A#" role="button" >A#</div>
+          <div onclick="checkCorrect('B#')" class="B#" id="B#" role="button" >B#</div>
+          <div onclick="checkCorrect('C')" class="C" id="C" role="button" >C</div>
+          <div onclick="checkCorrect('D')" class="D" id="D" role="button" >D</div>
+          <div onclick="checkCorrect('E')" class="E" id="E" role="button" >E</div>
+          <div onclick="checkCorrect('F')" class="F" id="F" role="button" >F</div>
+          <div onclick="checkCorrect('G')" class="G" id="G" role="button" >G</div>
+          <div onclick="checkCorrect('A')" class="A" id="A" role="button" >A</div>
+          <div onclick="checkCorrect('B')" class="B" id="B" role="button" >B</div>
+          <div onclick="checkCorrect('Cb')" class="Cb" id="Cb" role="button" >C♭</div>
+          <div onclick="checkCorrect('Db')" class="Db" id="Db" role="button" >D♭</div>
+          <div onclick="checkCorrect('Eb')" class="Eb" id="Eb" role="button" >E♭</div>
+          <div onclick="checkCorrect('Fb')" class="Fb" id="Fb" role="button" >F♭</div>
+          <div onclick="checkCorrect('Gb')" class="Gb" id="Gb" role="button" >G♭</div>
+          <div onclick="checkCorrect('Ab')" class="Ab" id="Ab" role="button" >A♭</div>
+          <div onclick="checkCorrect('Bb')" class="Bb" id="Bb" role="button" >B♭</div>
 
         </div>
       </div>
